@@ -11,6 +11,10 @@ description here
 
 ******************************************
 CHANGELOG: 01-APR-2012  MPB
+move onoffmenuitem() outside FRSKY conditional compile
+
+******************************************
+CHANGELOG: 01-APR-2012  MPB
 Add optional PPMSIM protocol, Fix Safety switch menu bug, Allow GPS altitude 
 on normal altitude screen with alarm and imperial conversion, fix time in 
 stamp.h (makefile), slim the code a bit.
